--- a/Example/UICurrencyTextFieldDemo/Base.lproj/Main.storyboard
+++ b/Example/UICurrencyTextFieldDemo/Base.lproj/Main.storyboard
@@ -20,13 +20,18 @@
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qkW-Y1-m4o" customClass="UICurrencyTextField" customModule="UICurrencyTextField">
                                 <rect key="frame" x="100" y="120" width="175" height="30"/>
-                                <color key="backgroundColor" red="0.87051463129999995" green="0.87063705920000001" blue="0.8704758883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 integers currency text field" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3m-95-Uoa">
                                 <rect key="frame" x="77.5" y="91" width="220" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="programmatically added" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UtT-yN-Xtj">
+                                <rect key="frame" x="94.5" y="214" width="186" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -38,12 +43,15 @@
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aao-me-7ob"/>
                             <constraint firstItem="I3m-95-Uoa" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="P3v-T0-m42"/>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="top" secondItem="I3m-95-Uoa" secondAttribute="bottom" constant="8" id="RXx-9q-fH0"/>
+                            <constraint firstItem="UtT-yN-Xtj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Zj6-L5-mWy"/>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="bZU-F7-lCz"/>
+                            <constraint firstItem="UtT-yN-Xtj" firstAttribute="top" secondItem="qkW-Y1-m4o" secondAttribute="bottom" constant="64" id="bhu-Tp-I70"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qkW-Y1-m4o" secondAttribute="trailing" constant="100" id="dMd-Fw-yo0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="programaticallyAddedLabel" destination="UtT-yN-Xtj" id="Aox-GZ-LNu"/>
                         <outlet property="textField" destination="qkW-Y1-m4o" id="MyP-Cx-6AS"/>
                     </connections>
                 </viewController>
