--- a/Example/Example/Base.lproj/Main.storyboard
+++ b/Example/Example/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,20 +32,38 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value without formatting" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMB-mB-boF">
+                                <rect key="frame" x="81.5" y="190" width="212" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value with formatting" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2r1-l2-upc">
+                                <rect key="frame" x="95.5" y="158" width="184" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="1WU-oD-Qeb"/>
+                            <constraint firstItem="2r1-l2-upc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="2WV-nU-pXz"/>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aao-me-7ob"/>
+                            <constraint firstItem="fMB-mB-boF" firstAttribute="top" secondItem="2r1-l2-upc" secondAttribute="bottom" constant="8" id="Nam-oV-YhV"/>
                             <constraint firstItem="I3m-95-Uoa" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="P3v-T0-m42"/>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="top" secondItem="I3m-95-Uoa" secondAttribute="bottom" constant="8" id="RXx-9q-fH0"/>
                             <constraint firstItem="qkW-Y1-m4o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="bZU-F7-lCz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qkW-Y1-m4o" secondAttribute="trailing" constant="50" id="dMd-Fw-yo0"/>
+                            <constraint firstItem="2r1-l2-upc" firstAttribute="top" secondItem="qkW-Y1-m4o" secondAttribute="bottom" constant="8" id="fiW-QJ-5y8"/>
+                            <constraint firstItem="fMB-mB-boF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gPb-yv-eHV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="formattedLabel" destination="2r1-l2-upc" id="DTj-47-7sS"/>
                         <outlet property="textField" destination="qkW-Y1-m4o" id="MyP-Cx-6AS"/>
+                        <outlet property="unformattedLabel" destination="fMB-mB-boF" id="sPW-AC-7GD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
